# HeptaVcn

./: README.md  settings.gradle
DemoTest/: go.mod  hello.go  socks5Demo.go
DemoTest/socks5Client/: Client.go  Datagram.go  Reply.go  Request.go  comm.go  util.go
TunnelServer/: CMakeLists.txt  Tunnel_server.cpp  androidstart.sh  createtun.sh  deltun.sh  libevent_main.cpp  main.cpp  start.doc  start.sh  udp.cpp  udp_client.cpp  udp_server.cpp
TunnelServer/client/: CMakeLists.txt  Tunnel_client.cpp
TunnelServer/localtext/: CMakeLists.txt  Tunnel_client.cpp
app/: build.gradle
app/src/androidTest/java/com/hepta/theptavpn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.html  help.html
app/src/main/cpp/: CMakeLists.txt  Config.cpp  Config.h  IP.cpp  IP.h  Icmp.cpp  Icmp.h  LRUCache.cpp  LRUCache.h  ProxyServer.cpp  Sock5Client.cpp  Sock5Client.h  Tcb.cpp  Tcb.h  Tcp.cpp  Tcp.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Udp.cpp  Udp.h  entry.cpp  ipReflect.cpp  ipReflect.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/cpp/libevent/include/event2/: bufferevent_struct.h  event-config.h
app/src/main/res/drawable/: cancel.xml  ic_enter.xml  ic_launcher_v_foreground.xml  mid_layout_selector.xml  ok.xml
app/src/main/res/layout/: activity_applist.xml  activity_help.xml  activity_main.xml  activity_mainold.xml  activity_newset.xml  activity_server_vmess.xml  activity_setting.xml  activity_settings.xml  item_application.xml  item_recycler_main.xml
app/src/main/res/menu/: applist_main_menu.xml  menu_drawer.xml  menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_v_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: pref_settings.xml
checkvpn/: build.gradle
checkvpn/src/main/: AndroidManifest.xml
checkvpn/src/main/cpp/: CMakeLists.txt  checkvpn.cpp
checkvpn/src/main/cpp/solist/: solist.cpp
checkvpn/src/main/res/values/: strings.xml  themes.xml
doc/: example.cap  tun0.cap  wlan.cap  wlan.cap2
gradle/wrapper/: gradle-wrapper.properties
ipvpn/: build.gradle
libevent/: build.gradle
libevent/src/main/cpp/: CMakeLists.txt  libevent.cpp
libevent/src/main/jni/: Android.mk  Application.mk
libevent/src/main/jni/libevent2/: evutil_rand.c
proxytest/: build.gradle
proxytest/src/main/: AndroidManifest.xml
proxytest/src/main/res/layout/: activity_main.xml
proxytest/src/main/res/values/: strings.xml  themes.xml
proxytest/src/main/res/values-night/: themes.xml
(+76 files in other folders)
